update all the things

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="ID=edge">
-    <title>React Boilerplate</title>
+    <meta charset="utf-8" />
+    <title>Analogica</title>
   </head>
+
   <body>
     <div id="app"></div>
   </body>
